[gd_scene load_steps=7 format=3 uid="uid://bbbqka1l72lml"]

[ext_resource type="Shader" path="res://scenes/test_button.gdshader" id="1_tvrtw"]
[ext_resource type="Script" path="res://scenes/components/card.gd" id="2_a4ccj"]
[ext_resource type="FontFile" uid="uid://bm8kaqoo4q6kd" path="res://assets/fonts/AlimamaDongFangDaKai-Regular.ttf" id="2_ietfg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y7j7f"]
shader = ExtResource("1_tvrtw")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_mvd8w"]
size = Vector2(240, 320)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0flsk"]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color(0.215686, 0.670588, 0.478431, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Card" type="TextureRect"]
material = SubResource("ShaderMaterial_y7j7f")
mouse_filter = 0
texture = SubResource("PlaceholderTexture2D_mvd8w")
script = ExtResource("2_a4ccj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ietfg")
theme_override_font_sizes/font_size = 26
text = "标题"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_constants/line_spacing = -2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_0flsk")
theme_override_styles/focus = SubResource("StyleBoxFlat_0flsk")
theme_override_styles/read_only = SubResource("StyleBoxFlat_0flsk")
placeholder_text = "骇人恶兽
苏打粉 
苏打粉
囧答复
东安反了
冻结法老
东案发
撒df
dsfa
dsfa
ds
afds
af
"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="TagContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
